--- a/qa-lib-core/src/main/resources/qa-application-example.yml
+++ b/qa-lib-core/src/main/resources/qa-application-example.yml
@@ -4,10 +4,12 @@ env:
       your-app:
         host: http://localhost
         port: 8080
+        type: rest
         enabled: true
       your-another-app:
         host: http://localhost
-        port: 8081
+        port: 5051
+        type: grpc
         enabled: false
     test-data-dir: testdata
     mock:
