--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -18,7 +18,7 @@ env:
   GIT_PUSH_TOKEN: ${{ secrets.GIT_PUSH_TOKEN }}
 
 jobs:
-  build:
+  setup:
     runs-on: ubuntu-latest
     permissions:
       contents: read
