--- a/build.gradle
+++ b/build.gradle
@@ -61,11 +61,12 @@ subprojects {
             }
             repositories {
                 maven {
+                    name = "GitHubPackages"
+                    url = "https://maven.pkg.github.com/${project.owner}/${project.name}"
                     credentials {
-                        username = ""
-                        password = ""
+                        username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
+                        password = project.findProperty("gpr.token") ?: System.getenv("GITHUB_TOKEN")
                     }
-                    url = project.version.toString().endsWith('SNAPSHOT') ? "mavenSnapshotsRepoUrl" : "mavenReleasesRepoUrl"
                 }
             }
         }
