--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -14,7 +14,7 @@ env:
   GIT_PUSH_TOKEN: ${{ secrets.GIT_PUSH_TOKEN }}
 
 jobs:
-  setup:
+  build-and-publish:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -44,26 +44,8 @@ jobs:
       - name: Clean, build and check
         run: ./gradlew clean build check
 
-  build-and-publish:
-    runs-on: ubuntu-latest
-    needs: setup
-    if: |
-      github.ref != 'refs/tags/*' &&
-      github.ref != 'refs/heads/release/*'
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Build Docker image
-        run: |
-          docker build -t ${{ env.IMAGE_NAME }}:${{ env.VERSION }} .
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v2
-        with:
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Push Docker image to GHCR
-        run: |
-          docker push ${{ env.IMAGE_NAME }}:${{ env.VERSION }}
+      - name: Publish
+        run: ./gradlew publish
 
   create-release:
     runs-on: ubuntu-latest
