--- a/qa-lib-bom/build.gradle
+++ b/qa-lib-bom/build.gradle
@@ -3,6 +3,35 @@ plugins {
     id 'maven-publish'
 }
 
+project.version = rootProject.version
+
+publishing {
+    publications {
+        //noinspection GroovyAssignabilityCheck
+        myPlatform(MavenPublication) {
+            pom {
+                groupId = rootProject.group
+                version = rootProject.version
+                name = project.name
+                artifactId = project.name
+            }
+            //noinspection GroovyAssignabilityCheck
+            from components.javaPlatform
+        }
+    }
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = "https://maven.pkg.github.com/${project.owner}/${project.name}"
+            credentials {
+                username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
+                password = project.findProperty("gpr.token") ?: System.getenv("GITHUB_TOKEN")
+            }
+        }
+    }
+}
+
+
 ext {
     junitVersion = '5.12.2'
     junitPlatformLauncherVersion = '1.12.2'
