--- a/build.gradle
+++ b/build.gradle
@@ -62,7 +62,7 @@ subprojects {
             repositories {
                 maven {
                     name = "GitHubPackages"
-                    url = "https://maven.pkg.github.com/${project.owner}/${project.name}"
+                    url = uri("https://maven.pkg.github.com/kolotovkin-sdet/${rootProject.name}")
                     credentials {
                         username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
                         password = project.findProperty("gpr.token") ?: System.getenv("GITHUB_TOKEN")
