--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ subprojects {
         }
 
         java {
-            withJavadocJar()
+//            withJavadocJar()
             withSourcesJar()
             sourceCompatibility = JavaVersion.VERSION_21
             targetCompatibility = JavaVersion.VERSION_21
